# DWT-Hessenberg

./: CHANGELOG_REFACTOR.md  CHANGELOG_REFACTOR_V2.md  CHANGELOG_REFACTOR_V3.md  CHANGELOG_REFACTOR_V4.md  CHANGELOG_REFACTOR_V5.md  MANIFEST_CLEANUP.md  PATCH_GUO2017_FA_K_FIXED.md  PATCH_HESS_NHA2023_64X64_BASELINE.md  PATCH_KUMAR2021_HH32_MATCH.md  PATCH_PROPOSAL_MATCH_SCRIPT.md  PATCH_REQUESTED_ATTACKS.md  README.md  main.py  pyproject.toml  requirements.txt  run_all.py
docs/: BASELINE_METHODS.md  BASELINE_VALIDATION_V5.md  ORIGINAL_VS_ADAPT_MODES.md  PAPER_COMPLIANCE_TEST_PLAN.md  baseline_paper_reported_results.csv
results/: README_RUN_TO_GENERATE.txt  proposal_validation_math_only.json  proposal_validation_no_e2e.json  test_guo_lambda.csv  test_guo_lambda.json
results/common_benchmark/: README_RUN_TO_GENERATE.txt
results/four_baseline_clean_smoke/: compare_psnr_nc_ber_ncc_before_after_attack.csv  per_image_attack_results.csv  summary_by_method_phase.csv
results/quick_proposal_check/: compare_psnr_nc_ber_ncc_before_after_attack.csv  per_image_attack_results.csv  summary_by_method_phase.csv
results/smoke_dwt_hd_svd_2025/: compare_psnr_nc_ber_ncc_before_after_attack.csv  per_image_attack_results.csv  (+1 more)
tests/: test_attack.py  test_baseline_paper_compliance.py  test_baseline_smoke.py  test_benchmark_cli.py  test_clean_registry.py  test_common_paper_math.py  test_dwt.py  test_io.py  test_math_core.py  test_methods_smoke.py  test_metrics.py  test_proposal_validation_layer.py  test_uploaded_baseline_paper_report_similarity.py
tools/: validate_proposal.py
(+39 files in other folders)
