[project]
name = "clean-watermarking-project"
version = "0.1.0"
description = "Clean benchmark framework for color image watermarking proposal paper"
requires-python = ">=3.10"
dependencies = ["numpy", "pillow", "scipy", "scikit-image", "pandas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
